# propag-hidalgo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codemcp.toml  flake.nix  gdal.nix  overlay.nix  run_codemcp.sh  run_fmt.sh  run_it.py  run_test.sh  test-project.qgz  times.gpkg  treefmt.nix
.claude/agents/: code-reviewer.md  debugger.md
.claude/commands/: commit.md  context_prime.md  execute-v2.md  execute-v3.md  execute.md  minima.md  p_review.md  plan.md
.github/workflows/: test.yml
behave-rs/: Cargo.toml
behave-rs/src/: behave.rs  lib.rs  main.rs  types.rs  units.rs
code-reviews/: 2025-07-31-py-propag-review.md
crates/: Cargo.toml  rust-toolchain.toml
crates/dmoist/: Cargo.toml
crates/dmoist/fixtures/: corrige_hcb_por_sombreado.txt  d1hr.txt  dir_viento.txt  efecto_precipitacion_maximo.txt  hcb.txt  humedad_vivo.txt  probabilidad_ignicion.txt  sombreado.txt
crates/dmoist/src/: lib.rs
crates/dmoist/test/fixtures/: corrige_prob_por_pp.txt  hco_x10hr.txt  mod_viento.txt  sombreado.txt
crates/firelib/: CLAUDE.md  Cargo.toml
crates/firelib-sys/: Cargo.toml  build.rs  fireLib.c
crates/firelib/src/: cuda.rs  f32.rs  f64.rs  firelib.rs  fuel_moisture.rs  lib.rs  units.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs
crates/propag/: Cargo.toml  build.rs
crates/propag/src/: lib.rs  loader.rs  main.rs  propag.cu  propag.h  propag.rs
crates/py-propag/: Cargo.toml  README.md  pyproject.toml
crates/py-propag/examples/: basic_usage.py
crates/py-propag/py_propag/: __init__.py
crates/py-propag/src/: lib.rs
crates/py-propag/tests/: __init__.py  test_basic.py  test_validation.py
dev-docs/: maturin-workflow.md
docs/: GPU_Solutions_to_Taxicab_Geometry_in_Fire_Spread_Simulation.md
firelib/: Cargo.toml
firelib-cuda/: Cargo.toml  build.rs
firelib-cuda/src/: lib.rs  propag.rs  standard_burn.rs
firelib-rs/: Cargo.toml
firelib-rs/src/: f32.rs  f64.rs  firelib.rs  lib.rs  main.rs  types.rs  units.rs
firelib-sys/: build.rs  fireLib.c  fireLib.h
firelib/src/: firelib.rs
geometry/: Cargo.toml
geometry/src/: lib.rs
nix/: devshell.nix  gdal.nix  overlay.nix  treefmt.nix  vm.nix
nix/pkgs/: geometry.nix  propag.nix  py-propag.nix  qgis-propag-algo.nix  qgis.nix
nix/pkgs/libecwj2/: default.nix  libecwj2-3.3.patch
plans/: 20250731-python-bindings-propag.md
propag/: Cargo.toml  build.rs
propag/src/: bench.rs  bench_preburn.rs  geometry.rs  lib.rs  loader.rs  main.rs  propag.cu  propag.h  propag.rs
qgis-plugin/propag-algo/: CMakeLists.txt
qgis-plugin/propag-algo/src/: CMakeLists.txt  plugin_base.cpp  plugin_base.h  plugincontainer.cpp  plugincontainer.h  qgis_propag_algo.cpp  qgis_propag_algo.h  qgsalgorithmpropag.cpp  qgsalgorithmpropag.h  qgspropagloader.cpp  qgspropagloader.h  qgsproviderpropag.cpp  qgsproviderpropag.h
qgis-plugin/propag25/: __init__.py  metadata.txt  propag25.py  propag25_dockwidget.py  propag25_dockwidget_base.ui  resources.py  resources.qrc
qgis-plugin/propag25/help/source/: conf.py  index.rst
qgis-plugin/propag25/processing_provider/: propag_algorithm.py  provider.py
wfspread/: Cargo.toml
wfspread/src/: lib.rs  types.rs  units.rs
