[package]
name = "firelib-cuda"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA/" }
firelib-rs = { path = "../firelib-rs", default-features = false, features=["cuda"] }

[build-dependencies]
cuda_builder = { git = "https://github.com/Rust-GPU/Rust-CUDA/" }
