[package]
name = "firelib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
const_soft_float = { git = "https://github.com/albertov/const_soft_float.git"}
heapless = "0.8.0"
rand = "0.9.0"
uom = "0.36.0"

[dev-dependencies]
firelib-sys = { path = "../firelib-sys" }
quickcheck = "1.0.3"

[features]
default = ["std"]
std = []
