[package]
name = "firelib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
const_soft_float = { git = "https://github.com/albertov/const_soft_float.git", features= ["no_std"]}
uom = { version = "0.36.0", default-features = false, features=["f64", "si", "serde"] }

[target.'cfg(target_os = "cuda")'.dependencies]
cuda_std = { git = "https://github.com/albertov/Rust-CUDA/" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rand = "0.9.0"
cust = { git = "https://github.com/albertov/Rust-CUDA/" }

[dev-dependencies]
quickcheck = "1.0.3"

[target.'cfg(not(target_os = "cuda"))'.dev-dependencies]
firelib-sys = { path = "../firelib-sys" }

[features]
default=["std"]
std=[]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
