[package]
name = "geometry"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = {version="0.5.1", default-features=false}
geo = "0.30.0"
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12" }
