[package]
name = "propag"
version = "0.1.0"
edition = "2021"

[dependencies]
cust = { git = "https://github.com/albertov/Rust-CUDA" }
rand = "0.9.0"
firelib-rs = { path = "../firelib-rs" }
uom = "0.36.0"

[build-dependencies]
cuda_builder = { git = "https://github.com/albertov/Rust-CUDA" }

# These are here to help rust-overlay properly generate a vendor dir for the nix
# build
[dev-dependencies]
compiler_builtins = "=0.1.148"
dlmalloc = "=0.2.7"
libc = "=0.2.169"
hermit-abi = "=0.4.0"
r-efi = "=4.5.0"
r-efi-alloc = "*"
fortanix-sgx-abi = "=0.5.0"
getopts="*"
hashbrown = "^0.15"
unwinding="*"
