[package]
name = "propag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "propag"
path = "src/main.rs"

[dependencies]
cust = { git = "https://github.com/albertov/Rust-CUDA", branch = "cuda_12" }
cust_core = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12" }
rand = "0.9.0"
firelib = { path = "../firelib" }
geometry = { path = "../geometry" }
uom = "0.36.0"
timeit = "0.1.2"
gdal = {version="0.17.1"}
gdal-sys = "0.10.0"
num-traits = "0.2.19"
approx = "0.5.1"
min_max_traits = "0.1.0"
cuda_std = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12" }
glam = { version = "0.30.1", default-features = false, features = ["approx", "cuda"] }
soa_derive = "0.14.0"

[build-dependencies]
cuda_builder = { git = "https://github.com/albertov/Rust-CUDA", branch = "cuda_12" }
cc = "1.2.16"
cbindgen = "0.28.0"

# These are here to help rust-overlay properly generate a vendor dir for the nix
# build
[dev-dependencies]
compiler_builtins = "=0.1.148"
dlmalloc = "=0.2.7"
libc = "=0.2.169"
hermit-abi = "=0.4.0"
r-efi = "=4.5.0"
r-efi-alloc = "*"
fortanix-sgx-abi = "=0.5.0"
getopts="*"
hashbrown = "^0.15"
unwinding="*"
