[package]
name = "dmoist"
version = "0.1.0"
edition = "2024"

[dependencies]
cust_core = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12_2" }
cuda_std = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12_2" }
num = { version = "0.4.3", default-features = false, features=["libm"] }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rand = "0.9.0"
soa_derive = "0.14.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
