[package]
name = "geometry"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cuda_std = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12_2" }
num-traits = { version = "0.2.19", default-features = false }
approx = {version="0.5.1", default-features=false}
cust_core = { git = "https://github.com/albertov/Rust-CUDA/", branch = "cuda_12_2" }
glam = { version = "0.30.1", default-features = false, features = ["cuda", "approx", "nostd-libm"] }
