[package]
name = "py-propag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_py_propag"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
propag = { path = "../propag" }
firelib = { path = "../firelib" }
geometry = { path = "../geometry" }
